--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark ">
       <a class="navbar-brand " href="#">CoronaCases</a>
       <button
         class="navbar-toggler "
@@ -49,11 +49,11 @@
       </div>
     </nav>
 
-    <div class="container ">
+    <div class="container">
       <table id="myTable" class="table my-5 ">
         <thead class="thead-dark">
           <tr class="header">
-            <th scope="col">#</th>
+            <th scope="col" class="removeMob">#</th>
             <th scope="col">Country</th>
             <th scope="col">Cases</th>
             <th scope="col">Deaths</th>
