--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark ">
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top">
       <a class="navbar-brand " href="#">CoronaCases</a>
       <button
         class="navbar-toggler "
@@ -62,6 +62,11 @@
         <tbody class="tbody"></tbody>
       </table>
     </div>
+    <footer class="bg-dark">
+      <p>Developed by Ali Zahir</p>
+
+      <a href="https://github.com/alizahir23/CoronaCases">View on GitHub</a>
+    </footer>
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
