--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       href="https://bootswatch.com/4/lux/bootstrap.min.css"
     />
 
-    <title>Hello, world!</title>
+    <title>CoronaCases</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top">
