added more info

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <title>CoronaCases</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top">
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark  ">
       <a class="navbar-brand " href="#">CoronaCases</a>
       <button
         class="navbar-toggler "
@@ -50,13 +50,18 @@
     </nav>
 
     <div class="container">
-      <table id="myTable" class="table my-5 ">
+      <table id="myTable" class="table my-5">
         <thead class="thead-dark">
           <tr class="header">
-            <th scope="col" class="removeMob">#</th>
+            <th scope="col">#</th>
             <th scope="col">Country</th>
             <th scope="col">Cases</th>
+            <th scope="col"><span class="badge badge-pill badge-success">Today</span></td> Cases</th>
             <th scope="col">Deaths</th>
+            <th scope="col"><span class="badge badge-pill badge-success">Today</span> Deaths</th>
+            <th scope="col">Recovered</th>
+            <th scope="col">Cases/Mil.</th>
+            <th scope="col">Deaths/Mil.</th>
           </tr>
         </thead>
         <tbody class="tbody"></tbody>
