--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-      <a class="navbar-brand " href="#">CoronaCases</a>
+      <a class="navbar-brand titleA" href="#">CoronaCases</a>
       <button
         class="navbar-toggler "
         type="button"
@@ -32,7 +32,7 @@
       >
         <span class="navbar-toggler-icon"></span>
       </button>
-
+      <div class="globalTotals text-center "></div>
       <div
         class="collapse navbar-collapse justify-content-end"
         id="navbarSupportedContent"
@@ -49,7 +49,10 @@
       </div>
     </nav>
 
+    <div class="alertContainer"></div>
+
     <div class="container">
+      
       <div class="row ">
       <div class="col-md-3 my-5 newsGrid">
         <h2 class="text-center">Latest News</h2>
