Final sugar coating

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-      <a class="navbar-brand titleA" href="#">CoronaCases</a>
+      <div class="titleContainer">
+      <a class="navbar-brand titleA" href="#"><img src="/icon.png" alt="" srcset="" class="cImg">CoronaCases </a>
+      
+      </div>
       <button
         class="navbar-toggler "
         type="button"
@@ -80,7 +83,7 @@
     </div>
     <footer class="bg-dark muted">
       <p>Developed by Ali Zahir</p>
-
+      
       <a href="https://github.com/alizahir23/CoronaCases">View on GitHub</a>
     </footer>
     <script
