made responsive tables

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <h2 class="text-center">Latest News</h2>
         <div class="newsCards"></div>
       </div>
-      <div class="col-md-9">
+      <div class="col-md-9 tableCol">
       <table id="myTable" class="table  my-5">
         <thead class="thead-dark">
           <tr class="header">
