tables are now sortable

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="newsCards"></div>
       </div>
       <div class="col-md-9 tableCol">
-      <table id="myTable" class="table table-sortable my-5">
+      <table id="myTable" class="table table-sortable table-hover my-5">
         <thead class="thead-dark">
           <tr class="header">
             <th scope="col">#</th>
