--- a/index.html
+++ b/index.html
@@ -66,14 +66,14 @@
         <thead class="thead-dark">
           <tr class="header">
             <th scope="col">#</th>
-            <th scope="col">Country</th>
-            <th scope="col">Cases</th>
-            <th scope="col"><span class="badge badge-pill badge-success">Today</span></td> Cases</th>
-            <th scope="col">Deaths</th>
-            <th scope="col"><span class="badge badge-pill badge-success">Today</span> Deaths</th>
-            <th scope="col">Recovered</th>
-            <th scope="col">Cases/Mil.</th>
-            <th scope="col">Deaths/Mil.</th>
+            <th scope="col">Country↓↑</th>
+            <th scope="col">Cases↓↑</th>
+            <th scope="col"><span class="badge badge-pill badge-success">Today</span></td> Cases↓↑</th>
+            <th scope="col">Deaths↓↑</th>
+            <th scope="col"><span class="badge badge-pill badge-success">Today</span> Deaths↓↑</th>
+            <th scope="col">Recovered↓↑</th>
+            <th scope="col">Cases/Mil.↓↑</th>
+            <th scope="col">Deaths/Mil.↓↑</th>
           </tr>
         </thead>
         <tbody class="tbody"></tbody>
