news is back live

--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
       </div>
     </nav>
 
-    <div class="alertContainer"></div>
+    <div class="alertContainer">
+      
+    </div>
 
     <div class="container">
       
