--- a/index.html
+++ b/index.html
@@ -52,11 +52,9 @@
       </div>
     </nav>
 
-    <div class="alertContainer">
-      
-    </div>
+    <div class="alertContainer"></div>
 
-    <div class="container">
+    <div class="myContainer">
       
       <div class="row ">
       <div class="col-md-3 my-5 newsGrid">
