fixed api update

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
       <div class="titleContainer">
-      <a class="navbar-brand titleA" href="#"><img src="https://www.covid19india.org/icon.png" alt="" srcset="" class="cImg">CoronaCases </a>
+      <a class="navbar-brand titleA" href="#">CoronaCases </a>
       
       </div>
       <button
